--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
             mkdir tmp
             git diff origin/master --name-only --diff-filter=d > tmp/files_to_lint
       - run:
-          name: Run rubocop
+          name: Run Rubocop
           shell: /bin/bash
           command: |
             cat tmp/files_to_lint | grep -E '.+\.(rb)$' | xargs bundle exec rubocop --force-exclusion \
@@ -65,6 +65,7 @@ jobs:
       - run:
           name: Run Tests
           command: |
+            mkdir tmp
             RSPEC_JUNIT_ARGS="-r rspec_junit_formatter -f RspecJunitFormatter -o test_results/rspec.xml"
             RSPEC_FORMAT_ARGS="-f progress --no-color -p 10"
             bundle exec rspec ./spec $RSPEC_FORMAT_ARGS $RSPEC_JUNIT_ARGS
@@ -80,9 +81,9 @@ jobs:
       - run:
           name: Publish to rubygems
           command: |
-            gem build active_job_log.gemspec
+            gem build simplecov_text_formatter.gemspec
             version_tag=$(git describe --tags)
-            gem push active_job_log-${version_tag#v}.gem
+            gem push simplecov_text_formatter-${version_tag#v}.gem
 
 workflows:
   version: 2
